# visual-studio-ids

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  product.rs  workload.rs
